// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantService joinGrants joins grants with same joinKey 1`] = `
Array [
  Object {
    "applications": Array [
      Object {
        "data": "c",
        "joinKey": "1",
        "type": "application",
      },
    ],
    "fullGrants": Array [],
    "payments": Array [
      Object {
        "data": "a",
        "joinKey": "1",
        "type": "payment",
      },
      Object {
        "data": "b",
        "joinKey": "1",
        "type": "payment",
      },
    ],
  },
  Object {
    "applications": Array [],
    "fullGrants": Array [],
    "payments": Array [
      Object {
        "data": "d",
        "joinKey": "2",
        "type": "payment",
      },
    ],
  },
]
`;

exports[`GrantService joinGrants returns joined and lonely grants 1`] = `
Array [
  Object {
    "applications": Array [],
    "fullGrants": Array [],
    "payments": Array [
      Object {
        "data": "a",
        "joinKey": "1",
        "type": "payment",
      },
    ],
  },
  Object {
    "payments": Array [
      Object {
        "data": "b",
        "type": "payment",
      },
    ],
  },
]
`;
